[fix] ë회원가입 후 자동 로그인 삭제