@@ -2,7 +2,6 @@ package com.store.rookiesoneteam.service.impl;
 
 import com.store.rookiesoneteam.component.UserMapper;
 import com.store.rookiesoneteam.domain.entity.User;
-import com.store.rookiesoneteam.domain.enums.UserRole;
 import com.store.rookiesoneteam.domain.enums.UserStatus;
 import com.store.rookiesoneteam.dto.UserDTO;
 import com.store.rookiesoneteam.error.CustomException;
@@ -11,8 +10,6 @@ import com.store.rookiesoneteam.repository.UserRepository;
 import com.store.rookiesoneteam.service.UserService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -20,6 +17,7 @@ import org.springframework.util.StringUtils;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Service("userServiceImpl")
 @RequiredArgsConstructor
@@ -35,12 +33,10 @@ public class UserServiceImpl implements UserService {
         User user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
 
-        // 1. 현재 비밀번호 확인 (필수)
         if (!passwordEncoder.matches(request.getCurrentPassword(), user.getPassword())) {
             throw new CustomException(ErrorCode.INCORRECT_PASSWORD);
         }
 
-        // 2. 변경 요청이 들어온 필드만 선택적으로 업데이트
         if (StringUtils.hasText(request.getName())) {
             user.changeName(request.getName());
         }
@@ -48,7 +44,6 @@ public class UserServiceImpl implements UserService {
             user.changePassword(passwordEncoder.encode(request.getNewPassword()));
         }
 
-        // 닉네임 변경 및 중복 확인
         if (StringUtils.hasText(request.getNickname()) && !Objects.equals(user.getNickname(), request.getNickname())) {
             if (userRepository.existsByNickname(request.getNickname())) {
                 throw new CustomException(ErrorCode.DUPLICATE_NICKNAME);
@@ -56,7 +51,6 @@ public class UserServiceImpl implements UserService {
             user.changeNickname(request.getNickname());
         }
 
-        // 이메일 변경 및 중복 확인
         if (StringUtils.hasText(request.getEmail()) && !Objects.equals(user.getEmail(), request.getEmail())) {
             if (userRepository.existsByEmail(request.getEmail())) {
                 throw new CustomException(ErrorCode.DUPLICATE_EMAIL);
@@ -64,7 +58,6 @@ public class UserServiceImpl implements UserService {
             user.changeEmail(request.getEmail());
         }
 
-        // 전화번호 변경 및 중복 확인
         if (StringUtils.hasText(request.getPhone()) && !Objects.equals(user.getPhone(), request.getPhone())) {
             if (userRepository.existsByPhone(request.getPhone())) {
                 throw new CustomException(ErrorCode.DUPLICATE_PHONE);
@@ -77,7 +70,7 @@ public class UserServiceImpl implements UserService {
 
     @Override
     @Transactional
-    public UserDTO.Response signup(UserDTO.Request request) {
+    public void signup(UserDTO.Request request) {
         if (userRepository.existsByUsername(request.getUsername())) {
             throw new CustomException(ErrorCode.DUPLICATE_USERNAME);
         }
@@ -88,10 +81,8 @@ public class UserServiceImpl implements UserService {
             throw new CustomException(ErrorCode.DUPLICATE_NICKNAME);
         }
 
-        User user = userMapper.toEntity(request, passwordEncoder);
-        User saved = userRepository.save(user);
-
-        return userMapper.toResponse(saved);
+        User user = userMapper.toEntity(request);
+        userRepository.save(user);
     }
 
     @Override
@@ -111,31 +102,11 @@ public class UserServiceImpl implements UserService {
         log.info("회원탈퇴 처리 완료: username={}", user.getUsername());
     }
 
-    // --- 이하 관리자용 또는 기타 메소드 (변경 없음) ---
-    @Override
-    public Page<UserDTO.Response> findUsersByStatus(UserStatus status, Pageable pageable) {
-        return userRepository.findAllByStatus(status, pageable)
-                .map(userMapper::toResponse);
-    }
-
-    @Override
-    public Page<UserDTO.Response> findUsersByStatusAndRole(UserStatus status, UserRole role, Pageable pageable) {
-        return userRepository.findAllByStatusAndRole(status, role, pageable)
-                .map(userMapper::toResponse);
-    }
-
     @Override
     @Transactional(readOnly = true)
-    public Page<UserDTO.Response> findAllUsers(Pageable pageable) {
-        return userRepository.findAll(pageable)
-                .map(userMapper::toResponse);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<UserDTO.UpdateRequest> getAllUsers() {
+    public List<UserDTO.AdminResponse> getAllUsers() {
         return userRepository.findAll().stream()
-                .map(UserMapper::toUpdateRequest)
-                .toList();
+                .map(userMapper::toAdminResponse)
+                .collect(Collectors.toList());
     }
 }
